--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name" : "uni-canvas",
-    "appid" : "__UNI__105DE52",
+    "name" : "uni-canvas-app",
+    "appid" : "__UNI__A800332",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -31,6 +31,8 @@
                     "<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>",
                     "<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>",
                     "<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>",
+                    "<uses-permission android:name=\"android.permission.INTERNAL_SYSTEM_WINDOW\"/>",
+                    "<uses-permission android:name=\"android.permission.INTERNET\"/>",
                     "<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>",
                     "<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
                     "<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>",
@@ -44,7 +46,25 @@
                 ]
             },
             "ios" : {},
-            "sdkConfigs" : {}
+            "sdkConfigs" : {
+                "ad" : {}
+            }
+        },
+        "nativePlugins" : {
+            "Aimer-UDPPlugin" : {
+                "__plugin_info__" : {
+                    "name" : "UDP-Socket通信插件(支持Android,IOS) - [试用版，仅用于自定义调试基座]",
+                    "description" : "Uniapp可通过此插件,实现基于UDP的消息通信,支持Android和IOS",
+                    "platforms" : "Android,iOS",
+                    "url" : "https://ext.dcloud.net.cn/plugin?id=2047",
+                    "android_package_name" : "",
+                    "ios_bundle_id" : "",
+                    "isCloud" : true,
+                    "bought" : 0,
+                    "pid" : "2047",
+                    "parameters" : {}
+                }
+            }
         }
     },
     "quickapp" : {},
